[gd_scene load_steps=5 format=3 uid="uid://w6b24gsn4wqb"]

[ext_resource type="Texture2D" uid="uid://dyn5cb3j1ikyx" path="res://assets/chuangsong.png" id="1_2u43y"]
[ext_resource type="Script" uid="uid://blja47v6j1r0w" path="res://scenes/prop/chuangsong.gd" id="1_38qo4"]
[ext_resource type="PackedScene" uid="uid://cbci0b2dt5dqs" path="res://utils/ConfirmAtionUtils.tscn" id="3_10jer"]

[sub_resource type="CircleShape2D" id="CircleShape2D_38qo4"]
radius = 17.0

[node name="Chuangsong" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_38qo4")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_2u43y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_38qo4")

[node name="ConfirmAtionUtils" parent="." instance=ExtResource("3_10jer")]
visible = false

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="canceled" from="ConfirmAtionUtils" to="." method="_on_confirm_ation_utils_canceled"]
[connection signal="confirmed" from="ConfirmAtionUtils" to="." method="_on_confirm_ation_utils_confirmed"]
